src/screens/OrganizationPeople/OrganizationPeople.module.css
.navbarbg {
  height: 60px;
  background-color: white;
  display: flex;
  margin-bottom: 30px;
  z-index: 1;
  position: relative;
  flex-direction: row;
  justify-content: space-between;
  box-shadow: 0px 0px 8px 2px #c8c8c8;
}

.logo {
  color: #707070;
  margin-left: 0;
  display: flex;
  align-items: center;
  text-decoration: none;
}

.logo img {
  margin-top: 0px;
  margin-left: 10px;
  height: 64px;
  width: 70px;
}

.logo > strong {
  line-height: 1.5rem;
  margin-left: -5px;
  font-family: sans-serif;
  font-size: 19px;
  color: #707070;
}
.mainpage {
  display: flex;
  flex-direction: row;
}
.sidebar {
  z-index: 0;
  padding-top: 10px;
  margin: 0;
  height: 100%;
}
.sidebar:after {
  content: '';
  background-color: #f7f7f7;
  position: absolute;
  width: 2px;
  height: 600px;
  top: 10px;
  left: 94%;
  display: block;
}
.sidebarsticky {
  padding-left: 45px;
}
.sidebarsticky > p {
  margin-top: -10px;
}

.navitem {
  padding-left: 27%;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.logintitle {
  color: #707070;
  font-weight: 600;
  font-size: 20px;
  margin-bottom: 30px;
  padding-bottom: 5px;
  border-bottom: 3px solid #31bb6b;
  width: 15%;
}
.searchtitle {
  color: #707070;
  font-weight: 600;
  font-size: 20px;
  margin-bottom: 20px;
  padding-bottom: 5px;
  border-bottom: 3px solid #31bb6b;
  width: 60%;
}
.justifysp {
  display: flex;
  justify-content: space-between;
}
@media screen and (max-width: 575.5px) {
  .justifysp {
    padding-left: 55px;
    display: flex;
    justify-content: space-between;
    width: 100%;
  }
}

.logintitleadmin {
  color: #707070;
  font-weight: 600;
  font-size: 18px;
  margin-top: 50px;
  margin-bottom: 40px;
  padding-bottom: 5px;
  border-bottom: 3px solid #31bb6b;
  width: 40%;
}
.admindetails {
  display: flex;
  justify-content: space-between;
}
.admindetails > p {
  margin-top: -12px;
  margin-right: 30px;
}
.mainpageright > hr {
  margin-top: 20px;
  width: 97%;
  margin-left: -15px;
  margin-right: -15px;
  margin-bottom: 20px;
}
.addbtnmain {
  width: 60%;
  margin-right: 50px;
}
.addbtn {
  float: right;
  width: 23%;
  border: 1px solid #e8e5e5;
  box-shadow: 0 2px 2px #e8e5e5;
  border-radius: 5px;
  background-color: #31bb6b;
  height: 40px;
  font-size: 16px;
  color: white;
  outline: none;
  font-weight: 600;
  cursor: pointer;
  margin-left: 30px;
  transition: transform 0.2s, box-shadow 0.2s;
}
.flexdir {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border: none;
}

.form_wrapper {
  margin-top: 27px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
  display: flex;
  flex-direction: column;
  padding: 40px 30px;
  background: #ffffff;
  border-color: #e8e5e5;
  border-width: 5px;
  border-radius: 10px;
}

.form_wrapper form {
  display: flex;
  align-items: left;
  justify-content: left;
  flex-direction: column;
}
.logintitleinvite {
  color: #707070;
  font-weight: 600;
  font-size: 20px;
  margin-bottom: 20px;
  padding-bottom: 5px;
  border-bottom: 3px solid #31bb6b;
  width: 40%;
}
.cancel > i {
  margin-top: 5px;
  transform: scale(1.2);
  cursor: pointer;
  color: #707070;
}
.modalbody {
  width: 50px;
}
.greenregbtn {
  margin: 1rem 0 0;
  margin-top: 10px;
  border: 1px solid #e8e5e5;
  box-shadow: 0 2px 2px #e8e5e5;
  padding: 10px 10px;
  border-radius: 5px;
  background-color: #31bb6b;
  width: 100%;
  font-size: 16px;
  color: white;
  outline: none;
  font-weight: 600;
  cursor: pointer;
  transition: transform 0.2s, box-shadow 0.2s;
  width: 100%;
}
.sidebarsticky > input {
  text-decoration: none;
  margin-bottom: 50px;
  border-color: #e8e5e5;
  width: 80%;
  border-radius: 7px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  box-shadow: none;
}

.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}
.loader {
  margin: 60px auto;
  margin-top: 35vh !important;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
  border-left: 1.1em solid #febc59;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}
.radio_buttons {
  color: #707070;
  font-weight: 600;
  font-size: 14px;
}
.radio_buttons > input {
  transform: scale(1.2);
}
.radio_buttons > label {
  margin-top: -4px;
  margin-left: 5px;
  margin-right: 15px;
}

@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.list_box {
  height: 70vh;
  overflow-y: auto;
  width: auto;
  padding-right: 50px;
}

